# dumpy

./: LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
