[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["Vincent Labelle <vetches_canto_0s@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"
ruff = "^0.5.1"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[tool.mypy]
strict = true
pretty = true

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "A001", "A002", "S"]
dummy-variable-rgx = "^_$"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
